# cower

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md  shell.nix
.github/workflows/: rust.yml
cower-client/: Cargo.toml
cower-client/src/: gui.rs  main.rs
cower-common/: Cargo.toml
cower-common/src/: lib.rs  message.rs  prelude.rs
cower-server/: Cargo.toml
cower-target/: Cargo.toml
cower-target/src/: lib.rs  main.rs
test-keys/: cert.crt  identity.p12  identity.pfx  private.key  private.pem  public.key  public.pem
