[package]
name = "cower-client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
cower-common = { path = "../cower-common" }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
native-tls = "0.2.14"
eframe = { version = "0.33.2", optional = true }
rfd = { version = "0.16.0", optional = true }

[features]
gui = ["dep:eframe", "dep:rfd"]
